# MOMO

./: .gitignore  LICENSE  README.md  data_processing.py  engine_finetune.py  engine_merging.py  engine_pretrain.py  engine_validation.py  find_best_epoch.py  main_finetune.py  main_pretrain.py  model_combos.py  models_finetune.py  models_pretrain.py  pyproject.toml  requirement.txt  task_vectors.py  todo.md
datasets_finetune/: atmospheric_dust.py  base_dataset.py  classification.py  conequest.py  dataset_factory.py  datasets_config.json  domars16.py  hirise_landmark.py  martian_frost.py  segmentation.py
models/: __init__.py  efficientnet.py  mae.py  models_vit.py  resnet.py  squeezenet.py  unetformer.py  vit.py
results/: results_classification_ci.csv
utils/: losses.py  lr_sched.py  metrics.py  misc.py  seed.py  statistics.json  stratified_partition.py  transforms.py
