[build-system]
requires = ["setuptools>=74.0.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "momo"
version = "0.1.0"
description = "MOMO: Mars Orbital Model — Foundation Model for Mars Orbital Applications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MOMO Authors"}
]
dependencies = [
    "torch>=2.4.0,<2.6.0",
    "torchvision>=0.19.0,<0.21.0",
    "pytorch-lightning>=2.4.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.1.0",
    "pandas>=2.2.2",
    "pillow>=10.2.0",
    "segmentation-models-pytorch>=0.5.0",
    "albumentations>=2.0.8",
    "opencv-python>=4.12.0",
    "tifffile>=2025.5.10",
    "rasterio>=1.4.3",
    "shapely",
    "scikit-learn",
    "scikit-image",
    "imbalanced-learn",
    "timm==0.6.12",
    "wandb>=0.18.5",
    "matplotlib",
    "einops",
    "lxml",
]

[tool.setuptools]
packages = ["models", "utils", "datasets_finetune"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "flake8>=4.0.1",
    "isort>=5.10.0",
    "pre-commit>=3.8.0",
    "flake8-pyproject",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
force_single_line = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E402", "F403"]
